AC_INIT([meego-netbook-theme], [0.1])
AC_CONFIG_SRCDIR([README])
AM_CONFIG_HEADER(config.h)

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Initialize libtool
AM_DISABLE_STATIC
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

PKG_PROG_PKG_CONFIG()

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.8.0,, AC_MSG_ERROR([GTK+-2.8 is required to compile moblin-netbook-engine]))
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

DEVELOPMENT_CFLAGS="-Wall"
AC_SUBST(DEVELOPMENT_CFLAGS)

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)

AC_CONFIG_FILES([
Makefile
])


AC_OUTPUT

